Fix contact links dark mode styling

--- a/style.css
+++ b/style.css
@@ -185,6 +185,11 @@ a {
   text-decoration: underline;
 }
 
+.dark-mode-contact-links {
+  color: #dce3e9;
+  border: 1.5px solid #dce3e9;
+}
+
 @media screen and (min-width: 768px) {
   #homepage-container {
     display: grid;
